# robotics-materials

./: .gitignore  README.md
Lecture-2-advanced_c-guidelines-and-debugging/examples/: struct.c
Lecture-2-advanced_c-guidelines-and-debugging/examples/date-structures/: date-no-structure.c  date-structure.c  printing-date-struct-two-members.c  printing-date-struct.c
Lecture-2-advanced_c-guidelines-and-debugging/examples/passing-structures/: fillStudent-return-validation-pointers.c  fillStudent-return-validation.c  fillStudent-return.c  fillStudent.c
Lecture-2-advanced_c-guidelines-and-debugging/examples/pointers-memory/: for-example.c  for-global-problematic.c  for-global.c
Lecture-2-advanced_c-guidelines-and-debugging/examples/work/: struct-test.c
Lecture-3-STM-programming/: stm-programing.html
Lecture-3-STM-programming/resources/logging/: logs.c
Lecture-3-STM-programming/resources/vl53l1x-stm32-hal-driver/VL53L1X/Inc/: VL53L1X.h  VL53L1X_calibration.h
Lecture-3-STM-programming/resources/vl53l1x-stm32-hal-driver/VL53L1X/Src/: VL53L1X_api.c  vl53l1_platform.c
Lecture-3-STM-programming/sample project/test1/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  test1 Debug.launch  test1.ioc
Lecture-3-STM-programming/sample project/test1/Core/Inc/: main.h  motor-test.h
Lecture-3-STM-programming/sample project/test1/Core/Src/: gpio.c  main.c  motor-test.c  tim.c  usart.c
Lecture-3-STM-programming/sample project/test1/Core/logging/: logs.h
Lecture-3-STM-programming/sample project/test1/Core/vl53l1x-stm32-hal-driver/: README.md
Lecture-3-STM-programming/sample project/test1/Core/vl53l1x-stm32-hal-driver/VL53L1X/Inc/: VL53L1X_api.h  vl53l1_types.h
Lecture-3-STM-programming/sample project/test1/Core/vl53l1x-stm32-hal-driver/VL53L1X/Src/: VL53L1X.c
